[package]
name = "to-streamshare"
version = "0.3.1"
edition = "2021"
description = "Upload to streamshare (to-ss > toss) from the terminal"
license = "MIT"
homepage = "https://waradu.dev"
repository = "https://github.com/Waradu/to-streamshare"
readme = "README.md"
authors = ["Waradu"]
keywords = ["streamshare","file-sharing","upload"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
kdam = { version = "0.5.2", features = ["rich", "spinner"] }
streamshare = "3.0.0"
tokio = { version = "1.40.0", features = ["full"] }

[[bin]]
name = "toss"
path = "src/main.rs"